--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         h-screen
         font-ubuntu
         overscroll-auto
-      " style="background-image: url('travel_bg.jpeg');background-repeat: no-repeat;background-position: center;">
+      "
+    style="background-image: url('our_pic_linktree.jpeg');background-repeat: no-repeat;background-position: center;background-size: cover;">
     <!-- Your Profile Picture Goes Here -->
     <img class="rounded-full w-24 mb-4" src="me.jpeg" alt="The Two Piscean's profile pic" />
 
