--- a/index.html
+++ b/index.html
@@ -39,13 +39,15 @@
         font-ubuntu
         overscroll-auto
       "
-    style="background-image: url('our_pic_linktree.jpeg');background-repeat: no-repeat;background-position: center;background-size: cover;">
+    style="background-image: url('our_pic_linktree.jpeg');background-repeat: no-repeat;background-position: center;background-size: cover;background-blend-mode: luminosity;">
     <!-- Your Profile Picture Goes Here -->
     <img class="rounded-full w-24 mb-4" src="me.jpeg" alt="The Two Piscean's profile pic" />
 
     <!-- Your Name And Paragraph Goes Here -->
-    <h1 class="animate-bounce"><strong>Welcome to thetwopisceans!</strong></h1>
-    <p class="mb-3 max-w-screen-md items-center text-gray-300 text-center">
+    <h1 class="animate-bounce"><strong style="color: indianred;font-family: emoji;">Welcome to thetwopisceans!</strong>
+    </h1>
+    <p class="mb-3 max-w-screen-md items-center text-gray-300 text-center"
+      style="background-color: cadetblue;border-radius: 10px;">
       Your ultimate destination for hassle-free travel planning!
       We've curated a collection of our favorite travel resources for you
     </p>
