--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png" />
   <link rel="manifest" href="favicon/site.webmanifest" />
+
+  <!-- GetYourGuide Analytics -->
+
+  <script type="text/javascript" async defer src="https://widget.getyourguide.com/dist/pa.umd.production.min.js"
+    data-gyg-partner-id="9AL8EBR"></script>
 </head>
 
 <body>
@@ -39,7 +44,7 @@
         font-ubuntu
         overscroll-auto
       "
-    style="background-image: url('our_pic_linktree.jpeg');background-repeat: no-repeat;background-position: center;background-size: cover;background-blend-mode: luminosity;">
+    style="height: auto;background-image: url('our_pic_linktree.jpeg');background-repeat: no-repeat;background-position: center;background-size: cover;background-blend-mode: luminosity;">
     <!-- Your Profile Picture Goes Here -->
     <img class="rounded-full w-24 mb-4" src="me.jpeg" alt="The Two Piscean's profile pic" />
 
@@ -47,11 +52,22 @@
     <h1 class="animate-bounce"><strong style="color: indianred;font-family: emoji;">Welcome to thetwopisceans!</strong>
     </h1>
     <p class="mb-3 max-w-screen-md items-center text-gray-300 text-center"
-      style="background-color: cadetblue;border-radius: 10px;">
+      style="background-color: cadetblue;border-radius: 10px;border: 1px solid goldenrod;">
       Your ultimate destination for hassle-free travel planning!
       We've curated a collection of our favorite travel resources for you
     </p>
 
+    <div id="gyg-widget"></div>
+    <!-- GetYourGuide Analytics -->
+
+    <script type="text/javascript" async defer src="https://widget.getyourguide.com/dist/pa.umd.production.min.js"
+      data-gyg-partner-id="9AL8EBR"></script>
+    </head>
+    <div style="width: 60%;height: 20%;" data-gyg-href="https://widget.getyourguide.com/default/availability.frame"
+      data-gyg-tour-id="550352" data-gyg-locale-code="en-US" data-gyg-currency="EUR" data-gyg-widget="availability"
+      data-gyg-variant="horizontal" data-gyg-partner-id="9AL8EBR" data-gyg-cmp="BestOfMorocco"><span>Powered by <a
+          target="_blank" rel="sponsored" href="https://www.getyourguide.com/ouarzazate-l1124/">GetYourGuide</a></span>
+    </div>
     <!-- All Links Goes Here  -->
     <div class="grid grid-cols-2 gap-2 w-3/6 justify-items-center">
       <a class="
@@ -59,7 +75,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-400
           justify-center
           items-center
@@ -74,7 +90,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-red-300
           justify-center
           items-center
@@ -88,7 +104,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -102,7 +118,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -116,7 +132,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -130,7 +146,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -144,7 +160,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -158,7 +174,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -172,7 +188,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -186,7 +202,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -200,7 +216,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -214,7 +230,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -228,7 +244,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
@@ -242,7 +258,7 @@
           max-w-screen-md
           flex flex-col
           w-5/6
-          h-15
+          h-12
           bg-blue-200
           justify-center
           items-center
