Removed best of morocco promotion

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <script type="text/javascript" async defer src="https://widget.getyourguide.com/dist/pa.umd.production.min.js"
       data-gyg-partner-id="9AL8EBR"></script>
     </head>
-    <div style="width: 60%;height: 20%;" data-gyg-href="https://widget.getyourguide.com/default/availability.frame"
+    <!-- <div style="width: 60%;height: 20%;" data-gyg-href="https://widget.getyourguide.com/default/availability.frame"
       data-gyg-tour-id="550352" data-gyg-locale-code="en-US" data-gyg-currency="EUR" data-gyg-widget="availability"
       data-gyg-variant="horizontal" data-gyg-partner-id="9AL8EBR" data-gyg-cmp="BestOfMorocco"><span>Powered by <a
           target="_blank" rel="sponsored" href="https://www.getyourguide.com/ouarzazate-l1124/">GetYourGuide</a></span>
-    </div>
+    </div> -->
     <!-- All Links Goes Here  -->
     <div class="grid grid-cols-2 gap-2 w-3/6 justify-items-center">
       <a class="
