--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
           flex flex-col
           w-5/6
           h-12
-          bg-blue-400
+          bg-blue-200
           justify-center
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://agoda.tp.st/ZEcYskb9">
         <img src="https://cdn6.agoda.net/images/kite-js/logo/agoda/color-default.svg" width="60px" height="60px"
           alt="Primary Logo">
@@ -91,11 +93,13 @@
           flex flex-col
           w-5/6
           h-12
-          bg-red-300
+          bg-blue-200
           justify-center
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://airhelp.tp.st/sncV94At">
         <img src="https://img.wway.io/travelpayouts/brands/logo/120@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -110,6 +114,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://cheapoair.tp.st/Q6g6Netc">
         <img src="https://img.wway.io/travelpayouts/brands/logo/146@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -124,6 +130,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://eatwith.tp.st/raDQCBCG">
         <img src="https://img.wway.io/travelpayouts/brands/logo/164@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -138,6 +146,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://tp.st/ilpIKfKX">
         <img src="https://img.wway.io/travelpayouts/brands/logo/594@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -152,6 +162,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://flixbus.tp.st/6E1lmANC">
         <img src="https://img.wway.io/travelpayouts/brands/logo/136@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -166,6 +178,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://hilton.tp.st/KWkVv0JC">
         <img src="https://img.wway.io/travelpayouts/brands/logo/155@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -180,6 +194,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://hostelworld.tp.st/L5x6A2Ek">
         <img src="https://img.wway.io/travelpayouts/brands/logo/93@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -194,6 +210,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://klook.tp.st/u0w0SS5I">
         <img src="https://img.wway.io/travelpayouts/brands/logo/137@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -208,6 +226,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://omio.tp.st/ahI2FmOI">
         <img src="https://img.wway.io/travelpayouts/brands/logo/91@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -222,6 +242,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://oyohotels.tp.st/ols8vgQv">
         <img src="https://img.wway.io/travelpayouts/brands/logo/134@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -236,6 +258,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://trainline.tp.st/mSg75zME">
         <img src="https://img.wway.io/travelpayouts/brands/logo/116@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -250,6 +274,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://trip.tp.st/TSjcIaN6">
         <img src="https://img.wway.io/travelpayouts/brands/logo/121@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
@@ -264,6 +290,8 @@
           items-center
           m-2
           p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
           " target="_blank" href="https://viator.tp.st/7Ruv7XSN">
         <img src="https://img.wway.io/travelpayouts/brands/logo/47@svg" width="60px" height="60px" alt="Primary Logo">
       </a>
