--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://agoda.tp.st/ZEcYskb9">
-        <img src="https://cdn6.agoda.net/images/kite-js/logo/agoda/color-default.svg" width="60px" height="60px"
-          alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/agoda_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -101,7 +102,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://airhelp.tp.st/sncV94At">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/120@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/airhelp_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -117,7 +120,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://cheapoair.tp.st/Q6g6Netc">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/146@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/cheapair_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -133,7 +138,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://eatwith.tp.st/raDQCBCG">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/164@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/eatwith_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -149,7 +156,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://tp.st/ilpIKfKX">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/594@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/expedia_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -165,7 +174,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://flixbus.tp.st/6E1lmANC">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/136@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/flixbus_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -181,7 +192,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://hilton.tp.st/KWkVv0JC">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/155@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/hilton_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -197,7 +210,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://hostelworld.tp.st/L5x6A2Ek">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/93@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/hostelworld_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -213,7 +228,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://klook.tp.st/u0w0SS5I">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/137@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/klook_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -229,7 +246,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://omio.tp.st/ahI2FmOI">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/91@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/omio_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -245,7 +264,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://oyohotels.tp.st/ols8vgQv">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/134@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/oyo_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -261,7 +282,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://trainline.tp.st/mSg75zME">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/116@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/trainline_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -277,7 +300,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
         " target="_blank" href="https://trip.tp.st/TSjcIaN6">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/121@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/trip_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
           rounded-xl
@@ -293,7 +318,9 @@
           hover:bg-blue-100
           hover:border-purple-700 border-2
           " target="_blank" href="https://viator.tp.st/7Ruv7XSN">
-        <img src="https://img.wway.io/travelpayouts/brands/logo/47@svg" width="60px" height="60px" alt="Primary Logo">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/viator_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
       </a>
     </div>
     <!-- <a
