Updated gyg logo

--- a/index.html
+++ b/index.html
@@ -83,6 +83,24 @@
           p-4
           hover:bg-blue-100
           hover:border-purple-700 border-2
+        " target="_blank" href="https://getyourguide.tp.st/O2gRPpzL">
+        <img
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/gyg_logo.svg"
+          width="60px" height="60px" alt="Primary Logo">
+      </a>
+      <a class="
+          rounded-xl
+          max-w-screen-md
+          flex flex-col
+          w-5/6
+          h-12
+          bg-blue-200
+          justify-center
+          items-center
+          m-2
+          p-4
+          hover:bg-blue-100
+          hover:border-purple-700 border-2
         " target="_blank" href="https://agoda.tp.st/ZEcYskb9">
         <img
           src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/agoda_logo.svg"
