Updated url of logo

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           hover:border-purple-700 border-2
         " target="_blank" href="https://getyourguide.tp.st/O2gRPpzL">
         <img
-          src="https://raw.githubusercontent.com/thetwopisceans/linktree/073bc7c6cf89f713b8d2a79ac67248ff9070e6c7/assets/gyg_logo.svg"
+          src="https://raw.githubusercontent.com/thetwopisceans/linktree/86fffb48a9cd2dcd985b8a456eb924b39c83ed8d/assets/gyg_logo.png"
           width="60px" height="60px" alt="Primary Logo">
       </a>
       <a class="
