Revamp to react

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
   <title>LinkHub | Links</title>
-  <meta http-equiv="content-language" content="”en-us”" />
+  <meta http-equiv="content-language" content="en-US" />
   <meta property="og:url" content="https://linkhub.ml" />
 
   <!-- Importing Styles  -->
   <link rel="stylesheet" href="tailwind.css" />
-  <link rel="stylesheet" href="assets/css/font-awesome.min.css" />
 
   <!-- Importing SVG Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
